--- a/style/style.css
+++ b/style/style.css
@@ -105,3 +105,30 @@ a{
 	position: relative;
 	clip-path: polygon(0% 0%, 25% 33%, 50% 0%, 75% 33%, 100% 0%, 100% 67%, 75% 100%, 50% 67%,25% 100%, 0% 67%, 0% 0%);
 }
+.feedback-block{
+	display: flex;
+	justify-content: space-evenly;
+}
+.feedback{
+	text-align: center;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	width: 20vw;
+	font-size: 16px;
+}
+.feedback>hr{
+	height: 1px;
+	border: 0;
+	background: black;
+}
+.pp{
+	clip-path: circle(50% at 50% 50%);
+}
+h3{
+	display: flex;
+	justify-content: center;
+}
+section{
+	margin-bottom: 8vh;
+}
