--- a/style/style.css
+++ b/style/style.css
@@ -52,16 +52,11 @@ body {
 
 h1, h2 {
 	color: white;
-	font-weight: bold;
 	text-align: center;
 }
-
-h1 {
-	font-size: 6rem;
-	margin-top: 30vh;
+h1{
+	font-size: 48px;
 }
-
-h2 { font-size: 3rem; }
 
 @media (max-width: 750px) {
 	#background-video { display: none; }
@@ -72,7 +67,7 @@ h2 { font-size: 3rem; }
 }
 
 main {
-	background-color: lightblue;
+	background-color: #eee;
 	margin-top: 90vh;
 	position: relative;
 }
@@ -134,7 +129,7 @@ section{
 .partners-display{
 	display: grid;
 	grid-template: 0px / auto auto auto auto;
-	grid-gap: 10vh 10vw;
+	grid-gap: 15vh 10vw;
 	padding: 10px;
 }
 .partners-display>img{
@@ -150,4 +145,63 @@ section{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+.text-video{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	position: absolute;
+	top: -50vh;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 50vw;
+	color: white;
+}
+
+
+
+.carousel {
+	position: relative;
+	width: 100%;
+	height: 400px;
+	overflow: hidden;
+}
+
+.carousel-item {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 80%;
+	height: 100%;
+	opacity: 0;
+	transition: opacity 0.5s ease-in-out;
+}
+
+.carousel-item.active {
+	display: flex;
+	opacity: 1;
+}
+
+.carousel-item img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.carousel-navigation {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 10px;
+}
+
+.carousel-navigation button {
+	padding: 10px 20px;
+	background-color: #ccc;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.carousel-navigation button:hover {
+	background-color: #aaa;
 }
