--- a/style/style.css
+++ b/style/style.css
@@ -163,16 +163,18 @@ section{
 .carousel {
 	position: relative;
 	width: 100%;
-	height: 400px;
+	min-height: 30vh;
 	overflow: hidden;
 }
 
 .carousel-item {
+	justify-content: space-evenly;
 	position: absolute;
+	align-items: center;
 	top: 0;
 	left: 0;
-	width: 80%;
-	height: 100%;
+	width: 100%;
+	min-height: 30vh;
 	opacity: 0;
 	transition: opacity 0.5s ease-in-out;
 }
@@ -182,10 +184,9 @@ section{
 	opacity: 1;
 }
 
-.carousel-item img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+.img-carrousel {
+	width: auto;
+	max-height: 25vh;
 }
 
 .carousel-navigation {
@@ -204,4 +205,25 @@ section{
 
 .carousel-navigation button:hover {
 	background-color: #aaa;
+}
+.escape-carrousel{
+	max-width: 35vw;
+	display: flex;
+	flex-direction: column;
+}
+.info-escape-carrousel{
+	display: flex;
+	gap: 8vw;
+	margin-bottom: 2vh;
+}
+.spec-info-escape-carrousel{
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+.button{
+	background-color: #ffae00;
+	padding: 5px 15px;
+	border-radius: 20px;
+	width: fit-content;
 }
