--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -15,34 +15,31 @@
             <button class="prev-button"><img src="../img/arrow-left.svg" alt=""></button>
             <button class="next-button"><img src="../img/arrow-right.svg" alt=""></button>
         </div>
-        <div class="carousel">
-            <div class="carousel-item active">
-                <div class="escape-carrousel">
-                    <h3>Buch der 7 Siegel</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium aspernatur, consequatur cumque delectus dignissimos ea enim ipsum labore laboriosam molestiae mollitia non odit, perferendis perspiciatis quia recusandae, temporibus vel?</p>
-                    <div class="info-escape-carrousel"><div class="spec-info-escape-carrousel"><img src="../img/clock.svg" alt=""><div>1h30</div></div><div class="spec-info-escape-carrousel"><img src="../img/star.svg" alt=""><div>4.8/5</div></div><div class="spec-info-escape-carrousel"><img src="../img/users.svg" alt=""><div>12 max</div></div></div>
-                    <a href="" class="button">See more ...</a>
+        {% for escapeGame in escapeGames %}
+            <div class="carousel">
+                <div class="carousel-item active">
+                    <div class="escape-carrousel">
+                        <h3>{{ escapeGame.titre }}</h3>
+                        <p>{{ escapeGame.description}}</p>
+                        <div class="info-escape-carrousel">
+                        <div class="spec-info-escape-carrousel">
+                        <img src="../img/clock.svg" alt="">
+                        <div>{{ escapeGame.duree | date('H:i') }}</div>
+                        </div>
+                        <div class="spec-info-escape-carrousel">
+                        <img src="../img/star.svg" alt="">
+                        <div>{{ random(0,5) }}/5</div>
+                        </div>
+                        <div class="spec-info-escape-carrousel">
+                        <img src="../img/users.svg" alt="">
+                        <div>{{ escapeGame.nombreJoueursMax }}</div>
+                        </div>
+                        </div>
+                        <a href="" class="button">See more ...</a>
+                    </div>
+                    <img class="img-carrousel" src="{{ escapeGame.image }}" alt="Image 1">
                 </div>
-                <img class="img-carrousel" src="../img/Buch_der_7Siegel_Cover_KaiserstuhlEscape.jpg" alt="Image 1">
-            </div>
-            <div class="carousel-item">
-                <div class="escape-carrousel">
-                    <h3>In Cantata Vinum Escape Abenteuer</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium aspernatur, consequatur cumque delectus dignissimos ea enim ipsum labore laboriosam molestiae mollitia non odit, perferendis perspiciatis quia recusandae, temporibus vel?</p>
-                    <div class="info-escape-carrousel"><div class="spec-info-escape-carrousel"><img src="../img/clock.svg" alt=""><div>1h30</div></div><div class="spec-info-escape-carrousel"><img src="../img/star.svg" alt=""><div>4.8/5</div></div><div class="spec-info-escape-carrousel"><img src="../img/users.svg" alt=""><div>12 max</div></div></div>
-                    <a href="" class="button">See more ...</a>
-                </div>
-                <img class="img-carrousel" src="../img/In-Cantata-Vinum-Escape-Abenteuer.jpg" alt="Image 2">
-            </div>
-            <div class="carousel-item">
-                <div class="escape-carrousel">
-                    <h3>In Vino Veritas</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium aspernatur, consequatur cumque delectus dignissimos ea enim ipsum labore laboriosam molestiae mollitia non odit, perferendis perspiciatis quia recusandae, temporibus vel?</p>
-                    <div class="info-escape-carrousel"><div class="spec-info-escape-carrousel"><img src="../img/clock.svg" alt=""><div>1h30</div></div><div class="spec-info-escape-carrousel"><img src="../img/star.svg" alt=""><div>4.8/5</div></div><div class="spec-info-escape-carrousel"><img src="../img/users.svg" alt=""><div>12 max</div></div></div>
-                    <a href="" class="button">See more ...</a>
-                </div>
-                <img class="img-carrousel" src="../img/inVinoVeritas-Kaiserstuhl-Escape-Room-Walk.jpg" alt="Image 3">
-            </div>
+            {% endfor %}
         </div>
 
     </section>
