--- a/templates/backoffice_login/index.html.twig
+++ b/templates/backoffice_login/index.html.twig
@@ -13,23 +13,27 @@
 
 {% block body %}
 
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-    
+    <div class='container'>
+        <h1 class="text-center">Login</h1>
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
+        
 
-    <form action="{{ path('app_backoffice_login') }}" method="POST">
-        <fieldset>
-            <div class="form-group">
-            <label for="username" class="form-label mt-4">Username</label>
-            <input type="text" class="form-control" id="username" name="_username" aria-describedby="emailHelp" placeholder="username" value="{{ last_username }}">
-            <div class="form-group">
-            <label for="password" class="form-label mt-4">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Password" name="_password">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </fieldset>
-    </form>
+        <form action="{{ path('app_backoffice_login') }}" method="POST">
+            <fieldset>
+                <div class="form-group">
+                    <label for="username" class="form-label mt-4">Username</label>
+                    <input type="text" class="form-control" id="username" name="_username" aria-describedby="emailHelp" placeholder="username" value="{{ last_username }}">
+                    <div class="form-group">
+                        <label for="password" class="form-label mt-4">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Password" name="_password">
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </fieldset>
+        </form>
+    </div>
 
 {% endblock %}
 
