--- a/templates/admin_pannel/index.html.twig
+++ b/templates/admin_pannel/index.html.twig
@@ -17,10 +17,14 @@
     <div class="container">
         You are connected as {{ app.user.username }}
         <a href="{{ path('app_backoffice_logout') }}">Logout</a>
-
         <h3>Escape games</h3>
+            {% for message in app.flashes('success') %}
+                <div class="alert alert-success">
+                    {{ message }}
+                </div>
+            {% endfor %}
             <div class="tab-pane fade active show" id="escapegames" role="tabpanel">
-                <a href="#" class="btn btn-lg btn-primary">Create a new escape game</a>
+                <a href="{{ path('app_create_escape_game')}}" class="btn btn-lg btn-primary">Create a new escape game</a>
                 <ul class="list-group">
                     {% for escapeGame in escapeGames %}
                         <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -28,7 +32,7 @@
                             <div>
 
                             <a href="{{ path('app_edition_escape_game', {'id': escapeGame.id})}}" class="btn btn-warning">Edit</a>
-                            <a href="#" class="btn btn-danger">Delete</a>
+                            <a href="{{ path('app_delete_escape_game', {'id': escapeGame.id})}}" class="btn btn-danger">Delete</a>
                             </div>
                         </li>
                     {% endfor %}
