--- a/public/style/style.css
+++ b/public/style/style.css
@@ -293,3 +293,30 @@ section {
     flex-direction: column;
     align-items: center;
 }
+
+.show-escape{
+    display: flex;
+    gap: 8vw;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.escape-individual{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: fit-content;
+    justify-items: center;
+    grid-auto-flow: column;
+}
+.escape-individual>img{
+    width: 20vw;
+    opacity: 40%;
+    transition-duration: 0.6s;
+}
+.escape-individual:hover img{
+    opacity: 100%;
+}
+.escape-individual>h3{
+    color: #ffae00;
+}
