--- a/templates/adventure/index.html.twig
+++ b/templates/adventure/index.html.twig
@@ -5,5 +5,13 @@
 {% block body %}
     <main>
         <h1 style="color: #ffae00">Our Escape Game</h1>
+        <div class="show-escape">
+            {% for escapeGame in escapeGames %}
+                <div class="escape-individual {{ escapeGame.id }}">
+                    <img class="img-carrousel" src="{{ escapeGame.image }}" alt="Image 1">
+                    <h3>{{ escapeGame.titre }}</h3>
+                </div>
+            {% endfor %}
+        </div>
     </main>
 {% endblock %}
