--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,5 +24,5 @@
                     {% include '_footer.html.twig' %}
         {% endblock %}
     </body>
-    <script src="js/kaiserstuhl.js"></script>
+    <script src="/js/kaiserstuhl.js"></script>
 </html>
