--- a/public/style/style.css
+++ b/public/style/style.css
@@ -86,7 +86,7 @@ h1 {
     }
 }
 main{
-    background-color: #eee;
+    background-color: #eeeec9;
 }
 .home {
     margin-top: 90vh;
@@ -318,5 +318,53 @@ section {
     opacity: 100%;
 }
 .escape-individual>h3{
+    color: #ffae00;
+}
+.selec img{
+    opacity: 100%;
+}
+.mask{
+    display: none;
+}
+.show{
+    display: block;
+}
+.escape-precise{
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+    max-width: 80vw;
+    gap: 5vw;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+}
+.flex-spec{
+    display: flex;
+    gap: 2vw;
+    margin-bottom: 2vh;
+}
+
+#map{
+    height: 25vh;
+    width: 25vw;
+    margin-bottom: 3vh;
+}
+
+.contact-view{
+    display: flex;
+    flex-direction: column;
+    gap: 4vh;
+    max-width: 70vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.title-contact{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.title-contact>h2{
     color: #ffae00;
 }
