--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -2,8 +2,8 @@
     <a href='{{ path('app_accueil') }}'><img src='../img/kaiserstuhl_escape_logo.png'></a>
     <div class='header-right'>
         <a class='lien' href='{{ path('app_adventure') }}'>OUR ADVENTURE</a>
-        <a class='lien' href='index.php?action=offers'>OFFERS</a>
-        <a class='lien' href='index.php?action=faq'>FAQ</a>
-        <a class='lien' href='index.php?action=contact'>CONTACT</a>
+        <a class='lien' href='{{ path('app_offers') }}'>OFFERS</a>
+        <a class='lien' href='{{ path('app_faq') }}'>FAQ</a>
+        <a class='lien' href='{{ path('app_contact') }}'>CONTACT</a>
     </div>
 </header>
