--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -85,4 +85,6 @@
     </section>
     <div class="wave" style="top: 5vh"></div>
     </main>
+    <script src="/js/carrousel.js"></script>
+
 {% endblock %}
