--- a/templates/adventure/index.html.twig
+++ b/templates/adventure/index.html.twig
@@ -7,11 +7,39 @@
         <h1 style="color: #ffae00">Our Escape Game</h1>
         <div class="show-escape">
             {% for escapeGame in escapeGames %}
-                <div class="escape-individual {{ escapeGame.id }}">
+                <a class="escape-individual" data-id="{{ escapeGame.id }}" href="#precise">
                     <img class="img-carrousel" src="{{ escapeGame.image }}" alt="Image 1">
                     <h3>{{ escapeGame.titre }}</h3>
-                </div>
+                </a>
             {% endfor %}
         </div>
+            <div class="escape-precise" id="precise">
+            {% for escapeGame in escapeGames %}
+                <div class="mask" data-id="{{ escapeGame.id }}">
+                    <div class="escape-precise">
+                        <img class="img-carrousel" src="{{ escapeGame.image }}" alt="Image 1">
+                        <div>
+                            <h4 style="color: #ffae00">{{ escapeGame.titre }}</h4>
+                            <div class="flex-spec">
+                                <div class="spec-info-escape-carrousel">
+                                    <img src="../img/clock.svg" alt="">
+                                    <div>{{ escapeGame.duree | date('H:i') }}</div>
+                                </div>
+                                <div class="spec-info-escape-carrousel">
+                                    <img src="../img/star.svg" alt="">
+                                    <div>{{ random(0,5) }}/5</div>
+                                </div>
+                                <div class="spec-info-escape-carrousel">
+                                    <img src="../img/users.svg" alt="">
+                                    <div>{{ escapeGame.nombreJoueursMax }}</div>
+                                </div>
+                            </div>
+                            <a href="" class="button">Book</a>
+                            <p>{{ escapeGame.description }}</p>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+            </div>
     </main>
 {% endblock %}
