:bricks: edition de style + changement video fond

--- a/templates/adventure/index.html.twig
+++ b/templates/adventure/index.html.twig
@@ -41,5 +41,6 @@
                 </div>
             {% endfor %}
             </div>
+        <div class="wave" style="top: 5vh"></div>
     </main>
 {% endblock %}
