--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
     <main>
         <h1 style="color: #ffae00">FAQ</h1>
+        <div class="wave" style="top: 5vh"></div>
     </main>
 
 {% endblock %}
