--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -18,5 +18,6 @@
                 <div id="map"></div>
             </div>
         </div>
+        <div class="wave" style="top: 5vh"></div>
     </main>
 {% endblock %}
