--- a/templates/offers/index.html.twig
+++ b/templates/offers/index.html.twig
@@ -5,5 +5,6 @@
 {% block body %}
     <main>
         <h1 style="color: #ffae00">Offers</h1>
+        <div class="wave" style="top: 5vh"></div>
     </main>
 {% endblock %}
