:bricks: edition de style + changement video fond

--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -6,6 +6,7 @@
     <main>
         <h1 style="color: #ffae00">FAQ</h1>
         <div class="wave" style="top: 5vh"></div>
+        {% for faq in faqs %}
     </main>
 
 {% endblock %}
