:bricks: modification et creation des gift cards

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -11,7 +11,7 @@
             </div>
             <div class="title-contact">
                 <h2>Or if you need to call us</h2>
-                <a class="button" href=“tel:017666810096”>017666810096</a>
+                <a class="button" href=“tel:017666810096”>01766-68 10096</a>
             </div>
             <div class="title-contact">
                 <h2>Where we are</h2>
