--- a/templates/offers/index.html.twig
+++ b/templates/offers/index.html.twig
@@ -1,10 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{% endblock %}
+{% block title %}Kaiserstuhl Escape{% endblock %}
 
 {% block body %}
     <main>
-        <h1 style="color: #ffae00">Offers</h1>
+        <h1 style="color: #ffae00">Gift Card</h1>
+        <div class="sts-giftcard">
+            <img src="/img/offer-card.jpg" alt="">
+
+        </div>
         <div class="wave" style="top: 5vh"></div>
     </main>
 {% endblock %}
