--- a/public/style/style.css
+++ b/public/style/style.css
@@ -368,3 +368,18 @@ section {
 .title-contact>h2{
     color: #ffae00;
 }
+
+.faq-view{
+    max-width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+.faq-more{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sts-giftcard{
+    display: flex;
+}
