--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -1,8 +1,8 @@
 <header>
-    <a href='{{ path('app_accueil') }}'><img src='../img/kaiserstuhl_escape_logo.png'></a>
+    <a href='{{ path('app_accueil') }}'><img src='/img/kaiserstuhl_escape_logo.png'></a>
     <div class='header-right'>
         <a class='lien' href='{{ path('app_adventure') }}'>OUR ADVENTURE</a>
-        <a class='lien' href='{{ path('app_offers') }}'>OFFERS</a>
+        <a class='lien' href='{{ path('app_offers') }}'>GIFT CARD</a>
         <a class='lien' href='{{ path('app_faq') }}'>FAQ</a>
         <a class='lien' href='{{ path('app_contact') }}'>CONTACT</a>
     </div>
