--- a/templates/admin_pannel/index.html.twig
+++ b/templates/admin_pannel/index.html.twig
@@ -43,7 +43,7 @@
 		</div>
 		<h2 class="m-5">FAQ</h2>
         <div class="tab-pane fade active show" id="escapegames" role="tabpanel">
-			<a href="{{ path('app_create_escape_game')}}" class="btn btn-lg btn-primary mb-4">Create a new escape game</a>
+			<a href="{{ path('app_faq_create')}}" class="btn btn-lg btn-primary mb-4">Create a new escape game</a>
 			<ul class="list-group">
 				{% for faq in faqs %}
 					<li class="list-group-item d-flex justify-content-between align-items-center">
@@ -52,8 +52,8 @@
 						</a>
                         <p>{{ faq.answer }}</p>
 						<div>
-							<a href="{{ path('app_edition_escape_game', {'id': faq.id})}}" class="btn btn-warning">Edit</a>
-							<a href="{{ path('app_delete_escape_game', {'id': faq.id})}}" class="btn btn-danger">Delete</a>
+							<a href="{{ path('app_faq_edit', {'id': faq.id})}}" class="btn btn-warning">Edit</a>
+							<a href="{{ path('app_faq_delete', {'id': faq.id})}}" class="btn btn-danger">Delete</a>
 						</div>
 					</li>
 				{% endfor %}
