--- a/public/style/style.css
+++ b/public/style/style.css
@@ -382,4 +382,36 @@ section {
 
 .sts-giftcard{
     display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.sts-giftcard>img{
+    max-width: 50vw;
+    height: auto;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input[type=submit]{
+    background-color: #ffae00;
+    color: #fff;
+    border: none;
+    padding: 1em 2em;
+    border-radius: 50px;
+}
+
+.text-offer{
+    max-width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.view-offer{
+    display: flex;
+    flex-direction: column;
+    gap: 5vh;
 }
