:bricks: création page shop avec form et autre

--- a/templates/adventure/index.html.twig
+++ b/templates/adventure/index.html.twig
@@ -34,7 +34,7 @@
                                     <div>{{ escapeGame.nombreJoueursMax }}</div>
                                 </div>
                             </div>
-                            <a href="" class="button">Book</a>
+                            <a href="{{ path('app_shop') }}" class="button">Book</a>
                             <p>{{ escapeGame.description }}</p>
                         </div>
                     </div>
