--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,3 +1,6 @@
+html {
+    scroll-behavior: smooth;
+}
 body {
     background: #1C1C1C;
     color: #424242;
@@ -162,16 +165,17 @@ section {
 
 .partners-display {
     display: grid;
-    grid-template: 0 / auto auto auto auto;
-    grid-gap: 15vh 10vw;
+    grid-template: auto / auto auto auto auto;
+    grid-gap: 5vh 10vw;
     padding: 10px;
 }
 
 .partners-display > img {
-    width: 15vw;
-    height: auto;
+    max-width: 15vw;
+    max-height: 15vh;
     opacity: 0.5;
     transition-duration: 0.5s;
+    place-self: center;
 }
 
 .partners-display > img:hover {
@@ -414,4 +418,46 @@ input[type=submit]{
     display: flex;
     flex-direction: column;
     gap: 5vh;
+}
+
+.carousel-navigation>button{
+    background-color: #eeeec9;
+}
+
+form {
+    background-color: #FFFFFF;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px #BBBBBB;
+    width: 50%;
+    margin: auto;
+}
+
+label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+input[type="text"], input[type="email"], select, textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0px 0px 3px #BBBBBB;
+}
+
+select option:first-child {
+    display: none;
+}
+
+input[type="submit"] {
+    background-color: #4CAF50;
+    color: #FFFFFF;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    font-size: 16px;
 }
