--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -6,4 +6,20 @@
         <a class='lien' href='{{ path('app_faq') }}'>FAQ</a>
         <a class='lien' href='{{ path('app_contact') }}'>CONTACT</a>
     </div>
+    <div>
+        {% if app.request.locale != 'fr' %}
+                <a href="{{ path('app_accueil', {'lang': 'fr'}) }}">Passer en français</a>
+        {% endif %}
+
+        {% if app.request.locale != 'en' %}
+            <a href="{{ path('app_accueil', {'lang': 'en'}) }}">Switch to English</a>
+        {% endif %}
+
+        {% if app.request.locale != 'de' %}
+            <a href="{{ path('app_accueil', {'lang': 'de'}) }}">Auf Deutsch wechseln</a>
+        {% endif %}
+
+
+    </div>
+
 </header>
