--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -6,14 +6,14 @@
     <main class="home">
     <!-- The video -->
     <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
-        <source src="../img/bg_video.mp4" type="video/mp4">
+        <source src="/img/bg_video.mp4" type="video/mp4">
     </video>
-    <div class="text-video"><h1>READY TO ESCAPE</h1><h2>Live an amazing story, beautiful and full of surprise</h2></div>
+    <div class="text-video"><h1>{{ 'ready_to_escape'|trans }}</h1><h2>Live an amazing story, beautiful and full of surprise</h2></div>
     <div class="wave" style="top: -5vh"></div>
     <section>
         <div class="carousel-navigation">
-            <button class="prev-button"><img src="../img/arrow-left.svg" alt=""></button>
-            <button class="next-button"><img src="../img/arrow-right.svg" alt=""></button>
+            <button class="prev-button"><img src="/img/arrow-left.svg" alt=""></button>
+            <button class="next-button"><img src="/img/arrow-right.svg" alt=""></button>
         </div>
         {% for escapeGame in escapeGames %}
             <div class="carousel">
@@ -23,15 +23,15 @@
                         <p>{{ escapeGame.description}}</p>
                         <div class="info-escape-carrousel">
                         <div class="spec-info-escape-carrousel">
-                        <img src="../img/clock.svg" alt="">
+                        <img src="/img/clock.svg" alt="">
                         <div>{{ escapeGame.duree | date('H:i') }}</div>
                         </div>
                         <div class="spec-info-escape-carrousel">
-                        <img src="../img/star.svg" alt="">
+                        <img src="/img/star.svg" alt="">
                         <div>{{ random(0,5) }}/5</div>
                         </div>
                         <div class="spec-info-escape-carrousel">
-                        <img src="../img/users.svg" alt="">
+                        <img src="/img/users.svg" alt="">
                         <div>{{ escapeGame.nombreJoueursMax }}</div>
                         </div>
                         </div>
@@ -50,19 +50,19 @@
             <div class="feedback">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium delectus dignissimos distinctio eos fuga id nulla perspiciatis repudiandae, sed, vitae voluptatibus voluptatum. Debitis, impedit mollitia placeat quia quo sit voluptatibus?</p>
                 <hr>
-                <img class="pp" src="../img/pp_dev.png" alt="">
+                <img class="pp" src="/img/pp_dev.png" alt="">
                 <div>Thibaut Pinot</div>
             </div>
             <div class="feedback">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium delectus dignissimos distinctio eos fuga id nulla perspiciatis repudiandae, sed, vitae voluptatibus voluptatum. Debitis, impedit mollitia placeat quia quo sit voluptatibus?</p>
                 <hr>
-                <img class="pp" src="../img/pp_dev.png" alt="">
+                <img class="pp" src="/img/pp_dev.png" alt="">
                 <div>Thibaut Pinot</div>
             </div>
             <div class="feedback">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium delectus dignissimos distinctio eos fuga id nulla perspiciatis repudiandae, sed, vitae voluptatibus voluptatum. Debitis, impedit mollitia placeat quia quo sit voluptatibus?</p>
                 <hr>
-                <img class="pp" src="../img/pp_dev.png" alt="">
+                <img class="pp" src="/img/pp_dev.png" alt="">
                 <div>Thibaut Pinot</div>
             </div>
         </div>
@@ -71,7 +71,7 @@
     <section>
         <h3 style="color: #ffae00">Our Offers</h3>
         <div class="global-offer"><p>Because experience are better than materials gifts</p>
-            <div class="offers-img"><img class="transparent" style="transform: translate(10vw)" src="../img/offer-card.JPG" alt=""><img class="front-img" src="../img/offer-card.JPG" alt=""><img class="transparent" style="transform: translate(-10vw)" src="../img/offer-card.JPG" alt=""></div>
+            <div class="offers-img"><img class="transparent" style="transform: translate(10vw)" src="/img/offer-card.JPG" alt=""><img class="front-img" src="/img/offer-card.JPG" alt=""><img class="transparent" style="transform: translate(-10vw)" src="/img/offer-card.JPG" alt=""></div>
             <a href="{{ path('app_offers') }}" class="button">See more ...</a>
         </div>
     </section>
@@ -80,7 +80,7 @@
         <h3 style="color: #ffae00">Our Partners</h3>
         <div class="parteners-block">
             <p>These companies celebrated their corporate escape adventure with us.</p>
-            <div class="partners-display"><img src="../img/Logitech_logo.png" alt=""><img src="../img/Logitech_logo.png" alt=""><img src="../img/Logitech_logo.png" alt=""><img src="../img/Logitech_logo.png" alt=""><img src="../img/Logitech_logo.png" alt=""><img src="../img/Logitech_logo.png" alt=""><img src="../img/Logitech_logo.png" alt=""><img src="../img/Logitech_logo.png" alt=""></div>
+            <div class="partners-display"><img src="/img/Logitech_logo.png" alt=""><img src="/img/Logitech_logo.png" alt=""><img src="/img/Logitech_logo.png" alt=""><img src="/img/Logitech_logo.png" alt=""><img src="/img/Logitech_logo.png" alt=""><img src="/img/Logitech_logo.png" alt=""><img src="/img/Logitech_logo.png" alt=""><img src="/img/Logitech_logo.png" alt=""></div>
         </div>
     </section>
     <div class="wave" style="top: 5vh"></div>
