--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -7,9 +7,9 @@
 		<a class='lien' href='{{ path('app_contact') }}'>CONTACT</a>
 	</div>
 	<div>
-		<a href="{{ path('app_accueil', {'lang': 'fr'}) }}">Passer en français</a>
-		<a href="{{ path('app_accueil', {'lang': 'en'}) }}">Switch to English</a>
-		<a href="{{ path('app_accueil', {'lang': 'de'}) }}">Auf Deutsch wechseln</a>
+		<a href="{{ path('app_accueil', {'lang': 'fr'}) }}"><img class="flag" src="/img/France_flag.png" alt=""></a>
+		<a href="{{ path('app_accueil', {'lang': 'en'}) }}"><img class="flag" src="/img/UK_flag.png" alt=""></a>
+		<a href="{{ path('app_accueil', {'lang': 'de'}) }}"><img class="flag" src="/img/German_flag.png" alt=""></a>
 
 
 	</div>
