--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -6,16 +6,17 @@
         <div class="contact-view">
             <h1 style="color: #ffae00">Contact</h1>
             <div class="title-contact">
-                <h2>Write to us</h2>
+                <h2>{{ 'write_to_us'|trans }}</h2>
                 <a class="button" href="mailto:booking@we-escape.de">booking@we-escape.de</a>
             </div>
             <div class="title-contact">
-                <h2>Or if you need to call us</h2>
+                <h2>{{ 'or_if_you_need'|trans }}</h2>
                 <a class="button" href=“tel:017666810096”>01766-68 10096</a>
             </div>
             <div class="title-contact">
-                <h2>Where we are</h2>
+                <h2>{{ 'where_we_are'|trans }}</h2>
                 <div id="map"></div>
+                {{ 'adress'|trans }}
             </div>
         </div>
         <div class="wave" style="top: 5vh"></div>
