--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -11,8 +11,8 @@
                 <p>{{ faq.answer }}</p>
             {% endfor %}
             <div class="faq-more">
-                <h3 style="color: #ffae00">In case which you don't find your answer, contact us here</h3>
-                <a href="{{ path('app_contact') }}" class="button">Click here</a>
+                <h3 style="color: #ffae00">{{ 'in_case_which_you'|trans }}</h3>
+                <a href="{{ path('app_contact', {'lang': app.request.get('lang')}) }}" class="button">{{ 'click_here'|trans }}</a>
             </div>
         </div>
         <div class="wave" style="top: 5vh"></div>
