--- a/templates/offers/index.html.twig
+++ b/templates/offers/index.html.twig
@@ -4,22 +4,18 @@
 
 {% block body %}
     <main>
-        <h1 style="color: #ffae00">Gift Card</h1>
+        <h1 style="color: #ffae00">{{ 'gift_card'|trans }}</h1>
         <div class="view-offer">
-            <p class="text-offer">Looking for the perfect gift for that special someone? Look no further than our gift cards! With our easy-to-use website, you can purchase gift cards in any amount, and send them instantly to your loved ones. Whether it's for a birthday, anniversary, or just to say "thank you," our gift cards are the perfect way to show you care. Plus, with no expiration date and the ability to use them on anything in our store, our gift cards are a gift that keeps on giving. So why wait? Purchase your gift card today and give the gift of choice and convenience!</p>
+            <p class="text-offer">{{ 'looking_for_the_perfect'|trans }}</p>
             <div class="sts-giftcard">
                 <img src="/img/offer-card.jpg" alt="">
                 <form action="">
-                    <h2 style="color: #ffae00">Insert the value you want to offer</h2><br>
+                    <h2 style="color: #ffae00">{{ 'insert_the_value_you'|trans }}</h2><br>
                     <input type="text" id="price" name="price" value=""><br>
-                    <input type="submit" value="Buy now">
+                    <input type="submit" value="{{ 'buy_now'|trans }}">
                 </form>
             </div>
-            <p class="text-offer">Our gift cards are not only easy to purchase, but they're also easy to redeem. Your recipient can simply enter their gift card code at checkout, and the value of the card will be applied to their purchase. Plus, with a wide variety of products available on our website, from clothing and accessories to home decor and electronics, there's something for everyone to enjoy.
-
-                And the best part? Our gift cards never expire, so your loved ones can use them whenever they're ready to make a purchase. This makes them a great gift option for those who are hard to shop for or who have busy schedules. And with no additional fees or hidden charges, you can rest assured that you're getting a great deal.
-
-                So why not give the gift of choice with our easy-to-use gift cards? Purchase now and make someone's day!</p>
+            <p class="text-offer">{{ 'our_gift_cards_are'|trans }}</p>
             <div class="wave" style="top: 5vh"></div>
         </div>
     </main>
