--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -6,23 +6,23 @@
 <main>
     <form method="post" action="">
 
-        <label for="fname">First name :</label>
+        <label for="fname">{{ 'first_name'|trans }}</label>
         <input type="text" id="fname" name="fname" required><br>
-        <label for="lname">Last name :</label>
+        <label for="lname">{{ 'last_name'|trans }}</label>
         <input type="text" id="lname" name="lname" required><br>
 
         <label for="email">Email :</label>
         <input type="email" id="email" name="email" required><br>
 
-        <label for="produit">Produit :</label>
+        <label for="produit">{{ 'escape_game'|trans }}</label>
         <select id="produit" name="produit" required>
-            <option value="">-- Choisissez un produit --</option>
+            <option value="">-- {{ 'chose_an_escape'|trans }} --</option>
             {% for escapeGame in escapeGames %}
             <option value="produit1">{{ escapeGame.titre }}</option>
             {% endfor %}
         </select><br>
 
-        <label for="quantite">Quantité :</label>
+        <label for="quantite">{{ 'number_of_people'|trans }}</label>
         <input type="number" id="quantite" name="quantite" min="1" max="10" required><br>
 
         <input type="submit" value="Acheter">
