--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -21,8 +21,19 @@
             <div class="carousel">
                 <div class="carousel-item active">
                     <div class="escape-carrousel">
+                    {% if app.request.get('lang') == "en" %}
                         <h3>{{ escapeGame.titre }}</h3>
                         <p>{{ escapeGame.description}}</p>
+                    {% endif %}
+                    {% if app.request.get('lang') == "fr" %}
+                        <h3>{{ escapeGame.titreFR }}</h3>
+                        <p>{{ escapeGame.descriptionFR}}</p>
+                    {% endif %}
+                    {% if app.request.get('lang') == "de" %}
+                        <h3>{{ escapeGame.titreDE }}</h3>
+                        <p>{{ escapeGame.descriptionDE}}</p>
+                    {% endif %}
+
                         <div class="info-escape-carrousel">
                         <div class="spec-info-escape-carrousel">
                         <img src="/img/clock.svg" alt="">
@@ -88,9 +99,7 @@
     <div class="wave" style="top: 5vh"></div>
     </main>
     <script src="/js/carrousel.js"></script>
-
-
-							
+{% for escapeGame in escapeGames %}
 							<div class="info-escape-carrousel">
 								<div class="spec-info-escape-carrousel">
 									<img src="/img/clock.svg" alt="">
