--- a/templates/adventure/index.html.twig
+++ b/templates/adventure/index.html.twig
@@ -9,7 +9,15 @@
             {% for escapeGame in escapeGames %}
                 <a class="escape-individual" data-id="{{ escapeGame.id }}" href="#precise">
                     <img class="img-carrousel" src="{{ escapeGame.image }}" alt="Image 1">
+                    {% if app.request.get('lang') == "en" %}
                     <h3>{{ escapeGame.titre }}</h3>
+                    {% endif %}
+                    {% if app.request.get('lang') == "fr" %}
+                    <h3>{{ escapeGame.titreFR }}</h3>
+                    {% endif %}
+                    {% if app.request.get('lang') == "de" %}
+                    <h3>{{ escapeGame.titreDE }}</h3>
+                    {% endif %}
                 </a>
             {% endfor %}
         </div>
@@ -19,7 +27,15 @@
                     <div class="escape-precise">
                         <img class="img-carrousel" src="{{ escapeGame.image }}" alt="Image 1">
                         <div>
+                        {% if app.request.get('lang') == "en" %}
                             <h4 style="color: #ffae00">{{ escapeGame.titre }}</h4>
+                        {% endif %}
+                        {% if app.request.get('lang') == "fr" %}
+                            <h4 style="color: #ffae00">{{ escapeGame.titreFR }}</h4>
+                        {% endif %}
+                        {% if app.request.get('lang') == "de" %}
+                            <h4 style="color: #ffae00">{{ escapeGame.titreDE }}</h4>
+                        {% endif %}
                             <div class="flex-spec">
                                 <div class="spec-info-escape-carrousel">
                                     <img src="../img/clock.svg" alt="">
@@ -35,7 +51,17 @@
                                 </div>
                             </div>
                             <a href="{{ path('app_shop', {'lang': app.request.get('lang')}) }}" class="button">{{ 'book'|trans }}</a>
-                            <p>{{ escapeGame.description }}</p>
+                            {% if app.request.get('lang') == "en" %}
+                                <p>{{ escapeGame.description }}</p>
+                            {% endif %}
+                            {% if app.request.get('lang') == "fr" %}
+                                <p>{{ escapeGame.descriptionFR }}</p>
+                            {% endif %}
+                            {% if app.request.get('lang') == "de" %}
+                                <p>{{ escapeGame.descriptionDE }}</p>
+                            {% endif %}
+
+
                         </div>
                     </div>
                 </div>
