Langue allemande WIP

--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -9,6 +9,7 @@
 	<div>
 		<a href="{{ path('app_accueil', {'lang': 'fr'}) }}"><img class="flag" src="/img/France_flag.png" alt=""></a>
 		<a href="{{ path('app_accueil', {'lang': 'en'}) }}"><img class="flag" src="/img/UK_flag.png" alt=""></a>
+		<!--<a href="{{ path('app_accueil', {'lang': 'de'}) }}"><img class="flag" src="/img/German_flag.png" alt=""></a>-->
 	</div>
 
 </header>
