--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -21,7 +21,7 @@
             <div class="carousel">
                 <div class="carousel-item active">
                     <div class="escape-carrousel">
-                    {% if app.request.get('lang') == "en" %}
+                    {% if app.request.get('lang') == "en" or app.request.get('lang') is null or app.request.get('lang') is null %}
                         <h3>{{ escapeGame.titre }}</h3>
                         <p>{{ escapeGame.description}}</p>
                     {% endif %}
