--- a/templates/adventure/index.html.twig
+++ b/templates/adventure/index.html.twig
@@ -9,7 +9,7 @@
             {% for escapeGame in escapeGames %}
                 <a class="escape-individual" data-id="{{ escapeGame.id }}" href="#precise">
                     <img class="img-carrousel" src="{{ escapeGame.image }}" alt="Image 1">
-                    {% if app.request.get('lang') == "en" %}
+                    {% if app.request.get('lang') == "en" or app.request.get('lang') is null %}
                     <h3>{{ escapeGame.titre }}</h3>
                     {% endif %}
                     {% if app.request.get('lang') == "fr" %}
@@ -27,7 +27,7 @@
                     <div class="escape-precise">
                         <img class="img-carrousel" src="{{ escapeGame.image }}" alt="Image 1">
                         <div>
-                        {% if app.request.get('lang') == "en" %}
+                        {% if app.request.get('lang') == "en" or app.request.get('lang') is null %}
                             <h4 style="color: #ffae00">{{ escapeGame.titre }}</h4>
                         {% endif %}
                         {% if app.request.get('lang') == "fr" %}
@@ -51,7 +51,7 @@
                                 </div>
                             </div>
                             <a href="{{ path('app_shop', {'lang': app.request.get('lang')}) }}" class="button">{{ 'book'|trans }}</a>
-                            {% if app.request.get('lang') == "en" %}
+                            {% if app.request.get('lang') == "en" or app.request.get('lang') is null %}
                                 <p>{{ escapeGame.description }}</p>
                             {% endif %}
                             {% if app.request.get('lang') == "fr" %}
